--- a/css/style.css
+++ b/css/style.css
@@ -1,234 +1,335 @@
-:root{
-    --Cornflower:#E7E9FC;
-    --iris:#4D5AE5;
-    --navy-blue:#2E2F42;
-    --white:#FFFFFF;
-    --state:#434455;
-    --cloud:#F4F4FD;
+:root {
+    --iris: #4d5ae5;
+    --ocean: #404bbf;
+    --navy-blue: #2e2f42;
+    --green: #31d0aa;
+    --slate: #434455;
+    --light-slate: #8e8f99;
+    --cornflower: #e7e9fc;
+    --cloud: #f4f4fd;
+    --navy-blue-modal: rgba(46, 47, 66, 0.4);
+    --grey: rgba(46, 47, 66, 0.7);
+    --white: #fff;
+    --dairy: #fcfcfc;
+    --font-family: "Roboto", sans-serif;
+    --second-family: "Raleway", sans-serif;
 }
 
-body{
-    font-family: "Roboto", sans-serif;
-    color: var(--state);
+body {
+    font-family: var(--font-family);
+    color: var(--slate);
     background-color: var(--white);
 }
 
-nav{
-        background-color: var(--white);
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.logo{
-    
-    font-family:"Raleway",sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-align: left;
-        color: var(--iris);
-        text-transform: uppercase;
+a {
+    text-decoration: none;
 }
 
-.logo-text-2{
-        font-family:"Raleway",sans-serif;
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 21px;
-            letter-spacing: 0.03em;
-            text-align: left;
-            color: var(--navy-blue);
+button {
+    cursor: pointer;
 }
 
-
-
-.link-logo{
-            font-size: 16px;
-            font-weight: 500;
-            line-height: 24px;
-            letter-spacing: 0.02em;
-            text-align: left;
-        color: var(--navy-blue);
+h1,
+h2,
+h3,
+p {
+    margin: 0;
 }
 
-.link-logo:hover{
-    color: #404bbf;
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
-.link-logo:focus{
-    color: #404bbf;
-}
-
-
-.contacts{
-    font-style: normal;
-}
-
-
-.list-contacts{
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-        color: var(--state);
-}
-
-.list-contacts:hover{
-    color: #404bbf;
-}
-
-.list-contacts:focus{
-    color: #404bbf;
-}
-
-.hero-image{
-        background-color: var(--navy-blue);
-}
-
-.hero-title{
-        font-size: 56px;
-        font-weight: 700;
-        line-height: 1.07;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: var(--white);
-}
-
-.hero-button{
-        background-color: var(--iris);
-        color: var(--white);
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        cursor: pointer;
-}
-
-.hero-button:hover{
-background-color: #404BBF;
-}
-
-
-.hero-button:focus{
-    background-color: #404BBF;
-}
-
-
-
-.point-list{
-    font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: var(--navy-blue);
-    }
-
-
-.paragraf-list{
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: var(--state);
-}
-
-.section-our-team{
-        background-color: var(--cloud);
-}
-
-.our-section{
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-align: center;
-        text-transform: capitalize;
-        color: var(--navy-blue);
-}
-
-.list-section-team{
-        background-color: var(--white);
-}
-
-
-.partner-team{
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: var(--navy-blue);
-}
-
-.job-name{
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: var(--state);
-}
-
-
-.name-section{
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-align: center;
-        text-transform: capitalize;
-        color: var(--navy-blue);
-}
-
-.list-our-1{
-    color: var(--white);
-}
-
-
-.list-our-2{
-    color: var(--white);
-}
-
-
-
-.piont-our{
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-        color: var(--navy-blue);
-}
-
-.paragraf-our{
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: var(--state);
-}
-
-.footer{
-        background-color: var(--navy-blue);
-}
-
-
-.studio{
-    font-family: Raleway;
-    font-size: 18px;
+/* ---Logo--- */
+.logo {
+    font-family: var(--second-family);
     font-weight: 700;
-    line-height: 21px;
+    font-size: 18px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
-    text-align: left;
-color: #F4F4FD;
+    text-transform: uppercase;
+    color: var(--iris);
+    margin-right: 76px;
 }
 
-.footer-paragraf{
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 24px;
-            letter-spacing: 0.02em;
-            text-align: left;
-            color: var(--cloud);
+.logo-word {
+    color: var(--navy-blue);
+}
+
+.logo-footer {
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.logo-word-footer {
+    color: var(--cloud);
+}
+
+/* ---Menu Items--- */
+.menu-item,
+.contact-item,
+.text-benefits,
+.text-avatar,
+.text-images,
+.text-footer {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.menu-item {
+    font-weight: 500;
+    color: var(--navy-blue);
+}
+
+.menu-item:hover,
+.menu-item:focus,
+.link:hover,
+.link:focus,
+.contact-item:hover,
+.contact-item:focus {
+    color: var(--ocean);
+}
+
+.link {
+    color: inherit;
+}
+
+.contact-item,
+.text-benefits,
+.text-avatar,
+.text-images,
+.text-footer {
+    font-weight: 400;
+    color: var(--slate);
+}
+
+/* ---Titles--- */
+.title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--white);
+    margin-bottom: 48px;
+}
+
+.title-benefits,
+.title-avatar,
+.title-images {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--navy-blue);
+}
+
+.title-team,
+.title-portfolio {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    color: var(--navy-blue);
+    margin-bottom: 72px;
+}
+
+.title-hero {
+    background: var(--navy-blue);
+    display: flex;
+    padding: 188px 0;
+}
+
+.title-portfolio,
+.our-portfolio-page {
+    padding: 120px 0;
+}
+
+/* ---Buttons--- */
+.button-service {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    background-color: var(--iris);
+    color: var(--white);
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin: auto;
+    border: none;
+}
+
+.button-service:hover,
+.button-service:focus {
+    background-color: var(--ocean);
+}
+
+/* ---Container--- */
+.container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+/* ---Header--- */
+.header-box {
+    border-bottom: 1px solid var(--cornflower);
+}
+
+.container-menu {
+    display: flex;
+}
+
+.page-nav {
+    display: flex;
+    align-items: center;
+}
+
+.menu {
+    display: flex;
+    gap: 40px;
+}
+
+.menu-item,
+.link {
+    padding: 24px 0;
+}
+
+.contacts-box {
+    display: flex;
+    gap: 40px;
+    justify-content: space-around;
+    padding-top: 24px;
+    margin-left: 332px;
+}
+
+/* ---Sections--- */
+/* ---1st Section--- */
+.title-hero .title {
+    justify-content: center;
+    max-width: 496px;
+    margin: auto;
+    flex-shrink: 0;
+}
+
+/* ---2nd Section--- */
+.benefits-page {
+    padding: 120px 0;
+}
+
+.benefits-list {
+    display: flex;
+    gap: 24px;
+}
+
+.benefits-list-item {
+    flex-basis: calc((100% - 3 * 24px) / 4);
+}
+
+.title-benefits {
+    margin-bottom: 8px;
+}
+
+/* ---3rd Section--- */
+.our-team-page {
+    padding: 120px 0;
+    background-color: var(--cloud);
+}
+
+.our-team-list {
+    display: flex;
+    gap: 24px;
+}
+
+.team-list-item {
+    flex-basis: calc((100% - 3 * 24px) / 4);
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background: var(--white);
+    text-align: center;
+}
+
+.avatar-information {
+    padding: 32px 0;
+    text-align: center;
+}
+
+.title-avatar {
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.text-avatar {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--slate);
+    text-align: center;
+}
+
+
+/* ---4th Section--- */
+.our-portfolio-page {
+    padding: 120px 0;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-shrink: 0;
+    row-gap: 48px;
+    column-gap: 24px;
+    flex-wrap: wrap;
+}
+
+.portfolio-item {
+    flex-basis: calc((100 - 2 * 24px) / 3);
+}
+
+.app-information {
+    padding: 32px 16px;
+    border: 1px solid var(--cornflower);
+    border-top: none;
+}
+
+.title-images {
+    margin-bottom: 8px;
+}
+
+/* ---Footer--- */
+.footer-box {
+    background: var(--navy-blue);
+    padding: 100px 0;
+}
+
+.text-footer {
+    max-width: 264px;
+}
+
+/* ---Utility--- */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
